# ipk-exercises

uebung01/: AllHFiles.txt  AllIncludeStatements  a.out  helloworld.cc  hw
uebung02/: errors  errors.cc  legalbutwrong  legalbutwrong.cc
uebung02/newDir/: exprogArchiv2.tar.xz
uebung02/newDir/exampleprogram/: quadrat
uebung03/aufgabe02/: a.out  main.cc
uebung03/aufgabe03/: a.out  fibonacci.cc
uebung03/aufgabe1/: a.out  main.cc
uebung04/aufgabe02/: potenzen.cc
uebung04/aufgabe03/: wurzeln.cc
uebung05/aufgabe01/: aufgabe01.cc
uebung05/aufgabe02/: aufgabe02.cc
uebung06/aufgabe01/: normal  normal.cc  readvector  readvector.cc  statistics.cc  statistics.hh  uniform  uniform.cc
uebung06/aufgabe03/: input.txt  letterfrequencies.cc  letterfrequencies.hh
uebung06/aufgabe04/: wordfrequencies.cc  wordfrequencies.hh
uebung07/aufgabe01/: polygon.cc  polygon.hh  test.cc
uebung07/aufgabe02/: CMakeCache.txt  CMakeLists.txt  canvas.cc  canvas.hh  plot  plot.cc  point.hh  testcorners  testcorners.cc
uebung07/aufgabe02/Testing/Temporary/: CTestCostData.txt
uebung08/aufgabe01/: swap.cc
uebung08/aufgabe02/: CMakeCache.txt  CMakeLists.txt  normal  readvector  statistics.hh  statisticsdriver  statisticsdriver.cc  uniform
uebung08/aufgabe03/: point.cc  point.hh  test.cc
uebung09/aufgabe01/: iteration.cc  iteration.hh  iterationresult.cc  iterationresult.hh  mandelbrot.cc
uebung11/: analysisplugin.hh  file1.txt  filters.hh  frequencies.hh  frequencysource.hh  letterfrequencies.hh  test_a1  test_a1.cc  test_a2  test_a2.cc  test_b  test_b.cc
